# ask_THWS

./: .env  .gitignore  .justfile  .pre-commit-config.yaml  404.html  README.md  api-server.py  api_server.py  autotest.py  compare_scraping_result.py  compose.yml  concept_board.drawio  concept_board_v1.drawio  embed_to_qdrant.py  flake.nix  flake2.nix  index.html  install_python.sh  mkdocs.yml  preprocess_and_chunk.py  pyproject.toml  query.py  query_api.py  requirements.txt  test.md  test.py  test1.py
.github/workflows/: black-suggestions.yml  black.yml  commitizen.yml  md-lint.yml  mkdocs.yml  ruff.yml
data/: fiw_data3.tar.xz  thws_data_chunks.tar.xz  thws_data_raw.tar.xz
dev-tools/jq/: index.html
dev-tools/precommit/: index.html
dev-tools/python/: index.html
dev-tools/server/: index.html
docs/: concept_board.drawio  index.md
docs/dev-tools/: black.md  commitizen.md  jq.md  precommit.md  python.md  server.md
docs/research/: Aufbau.md  data_quality.md  inhaltsangabe_KG.md  knowledge_graph.md  knowledge_graph_automated.md  scraping.md  vector_database.md
docs/tests/: first_results.md  fragen.md  test_results_2025-04-07_15-28-01.md
doku/dev-tools/: python.md  ruff.md
knowledgeMapper/: README.md  add_chunkID.py  build_dbs.py  build_hybrid_dbs.py  build_kg.py  config.py  convert_triplets.py  coref.py  cost_estimator.py  cudatest.py  extractTriplets.py  extractTriplets_1.py  extract_triplets.py  file_loader.py  filterChunks.py  graphToNeo4j.py  graphToNeo4j_final.py  ingest.py  instructs.md  link_triplets_to_chunks.py  local_models.py  mongo_loader.py  normalize_triplets.py  preprocess_data.py  preprocess_pdfs.py  pyproject.toml  query_kg.py  rag_manager.py  retrieval.py  triplet_utils.py  visualize_triplets_app.py
knowledgeMapper/oldteststuff/: extractTriplets_1.py  filterChunks.py  graphToNeo4j.py  normalize_triplets.py
knowledgeMapper/utils/: chunker.py  data_processor.py  debug_utils.py  local_models.py  mongo_loader.py  progress_bar.py  subdomain_utils.py
research/: vector_database.md
research/Aufbau/: index.html
research/data_quality/: index.html
research/inhaltsangabe_KG/: index.html
research/knowledge_graph/: index.html
research/knowledge_graph_automated/: index.html
research/scraping/: index.html
research/vector_database/: index.html
search/: search_index.json
testing/: api_server.py  autotest.py  fragenkatalog_2104.csv  inference_model_pipeline.py  model_ranking.py  query_api.py  test_results.csv  test_results_scored.csv
testing/GUI/: app.py  inference.py
testing/models/: Fragenkatalog_2904.csv  analysis.ipynb  (+3 more)
thws_scraper/: .dockerignore  .env  .justfile  Dockerfile  JQ_LOGS.md  LOGS.md  README.md  compose.yml  dump_mongo.sh  mongo_exporter.py  mongo_stats.py  requirements.txt  scrapy.cfg
(+34 files in other folders)
